# MCP-Center

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  server.py  test.py
clients/: mcp_chat_client.py
domains/calendar/: auth.py  client.py  schemas.py  tools.py
domains/discord/: client.py  schemas.py  tools.py
domains/github/: client.py  schemas.py  tools.py
domains/news/: client.py  schemas.py  tools.py
domains/weather/: client.py  schemas.py  tools.py
shared/: db.py
sharred/: db.py
tests/: calendar_test.py  discord_bot_test.py  news_report.py  testing.py  weather_test.py
