[project]
name = "mcp-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "icalendar>=7.1.3",
    "ics>=0.7.3",
    "mcp>=1.28.0",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
